[package]
name = "uniswap_tracker_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tokio-tungstenite = "0.21"
alloy = { version = "0.1.0", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"